--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,61 +1,170 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<!--> <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:orientation="vertical"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    tools:context=".MainActivity">
+
+    <TextView
+        android:layout_width="100dp"
+        android:layout_height="wrap_content"
+        android:background="#FFC107"
+        android:text="Anak 1"
+        android:textSize="30sp" />
+
+    <TextView
+        android:layout_width="100dp"
+        android:layout_height="wrap_content"
+        android:background="#2196F3"
+        android:text="Anak 2"
+        android:textSize="30sp"
+        />
+
+    <TextView
+        android:layout_width="100dp"
+        android:layout_height="wrap_content"
+        android:background="#4CAF50"
+        android:text="Anak 3"
+        android:textSize="30sp"
+        />
+
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:orientation="horizontal"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        tools:context=".MainActivity">
+
+    <TextView
+        android:layout_width="100dp"
+        android:layout_height="wrap_content"
+        android:background="#FF5722"
+        android:text="Anak 4"
+        android:textSize="30sp"
+      />
+
+    <TextView
+        android:layout_width="100dp"
+        android:layout_height="wrap_content"
+        android:background="#7FA158"
+        android:text="Anak 5"
+        android:textSize="30sp" />
+
+    <TextView
+        android:layout_width="100dp"
+        android:layout_height="wrap_content"
+        android:background="#67C69D"
+        android:text="Anak 6"
+        android:textSize="30sp"
+         />
+
+
+</LinearLayout>
+</LinearLayout></!-->
+
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
 	xmlns:app="http://schemas.android.com/apk/res-auto"
 	xmlns:tools="http://schemas.android.com/tools"
 	android:layout_width="match_parent"
 	android:layout_height="match_parent"
-	android:orientation="vertical"
+	android:background="#BC8F8F"
 	tools:context=".MainActivity">
 
-	<TextView
-		android:layout_width="100dp"
-		android:layout_height="wrap_content"
-		android:background="#FFEB3B"
-		android:text="Anak 1"
-		android:textSize="30sp"/>
+	<RelativeLayout
+		android:layout_width="match_parent"
+		android:layout_height="200dp"
+		android:background="#FFDAB9"></RelativeLayout>
 
-	<TextView
-		android:layout_width="100dp"
-		android:layout_height="wrap_content"
-		android:background="#3F51B5"
-		android:text="Anak 2"
-		android:textSize="30sp"/>
+	<RelativeLayout
+		android:layout_width="match_parent"
+		android:layout_height="match_parent"
+		android:layout_marginLeft="20dp"
+		android:layout_marginTop="70dp"
+		android:layout_marginRight="20dp"
+		android:layout_marginBottom="50dp">
 
-	<TextView
-		android:layout_width="100dp"
-		android:layout_height="wrap_content"
-		android:background="#4CAF50"
-		android:text="Anak 3"
-		android:textSize="30sp"/>
+		<RelativeLayout
+			android:layout_width="match_parent"
+			android:layout_height="match_parent"
+			android:layout_marginTop="50dp"
+			android:layout_marginEnd="200dp"
+			android:layout_marginBottom="400dp"
+			android:background="@drawable/radius_box"
+			android:orientation="horizontal">
 
+			<ImageView
+				android:layout_width="match_parent"
+				android:layout_height="match_parent"
+				android:src="@drawable/kookie"></ImageView>
+		</RelativeLayout>
+		<RelativeLayout
+			android:layout_width="match_parent"
+			android:layout_height="match_parent"
+			android:layout_marginLeft="200dp"
+			android:layout_marginTop="50dp"
+			android:layout_marginBottom="400dp"
+			android:background="@drawable/radius_box"
+			android:orientation="horizontal">
 
-	<LinearLayout
-		android:layout_width="wrap_content"
-		android:layout_height="wrap_content"
-		android:orientation="horizontal">
+			<ImageView
+				android:layout_width="match_parent"
+				android:layout_height="match_parent"
+				android:src="@drawable/jk"></ImageView>
 
-		<TextView
-			android:layout_width="100dp"
-			android:layout_height="wrap_content"
-			android:background="#20FAC7"
-			android:text="Anak 4"
-			android:textSize="30sp"/>
+		</RelativeLayout>
+		<RelativeLayout
+			android:layout_width="match_parent"
+			android:layout_height="match_parent"
+			android:layout_marginTop="250dp"
+			android:layout_marginRight="200dp"
+			android:layout_marginBottom="200dp"
+			android:background="@drawable/radius_box"
+			android:orientation="horizontal">
 
+			<ImageView
+				android:layout_width="match_parent"
+				android:layout_height="match_parent"
+				android:src="@drawable/jungkookie"></ImageView>
+		</RelativeLayout>
+		<RelativeLayout
+			android:layout_width="match_parent"
+			android:layout_height="match_parent"
+			android:layout_marginLeft="200dp"
+			android:layout_marginTop="250dp"
+			android:layout_marginBottom="200dp"
+			android:background="@drawable/radius_box"
+			android:orientation="horizontal">
+			<ImageView
+				android:layout_width="match_parent"
+				android:layout_height="match_parent"
+				android:src="@drawable/golden"></ImageView>
+		</RelativeLayout>
+		<RelativeLayout
+			android:layout_width="match_parent"
+			android:layout_height="match_parent"
+			android:layout_marginTop="450dp"
+			android:layout_marginRight="200dp"
+			android:background="@drawable/radius_box"
+			android:orientation="horizontal">
 
-		<TextView
-			android:layout_width="100dp"
-			android:layout_height="wrap_content"
-			android:background="#D63B3B"
-			android:text="Anak 5"
-			android:textSize="30sp"/>
+			<ImageView
+				android:layout_width="match_parent"
+				android:layout_height="match_parent"
+				android:src="@drawable/jekey"></ImageView>
+		</RelativeLayout>
+		<RelativeLayout
+			android:layout_width="match_parent"
+			android:layout_height="match_parent"
+			android:layout_marginLeft="200dp"
+			android:layout_marginTop="450dp"
+			android:background="@drawable/radius_box"
+			android:orientation="horizontal">
 
-		<TextView
-			android:layout_width="100dp"
-			android:layout_height="wrap_content"
-			android:background="#9C27B0"
-			android:text="Anak 6"
-			android:textSize="30sp"/>
-	</LinearLayout>
-
-
-</LinearLayout>
+			<ImageView
+				android:layout_width="match_parent"
+				android:layout_height="match_parent"
+				android:src="@drawable/jk"></ImageView>
+		</RelativeLayout>
